Finish styling the splash screen, resolve spacing-bugs

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -64,7 +64,8 @@ a {
   width: 263px;
   position: absolute;
   right: -8%;
-  top: 48%;
+  top: 48.5%;
+
 }
 
 .pass-container > span {
@@ -125,6 +126,29 @@ a {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6dbadb', endColorstr='#78addc',GradientType=0 ); /* IE6-9 */
 }
 
+.disabled-class, input.disabled-class {
+  height: 36px;
+  opacity: .5;
+  border-radius: 4px;
+  font-family: sans-serif;
+  font-size: 14px;
+  color: rgb(32, 32, 32);
+  font-weight: bolder;
+  width: 100%;
+  border-style: none;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#eef2f4+48,e4e9ec+59,f9fafb+100 */
+  background: rgb(238,242,244); /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(238,242,244,1) 48%, rgba(228,233,236,1) 59%, rgba(249,250,251,1) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  rgba(238,242,244,1) 48%,rgba(228,233,236,1) 59%,rgba(249,250,251,1) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  rgba(238,242,244,1) 48%,rgba(228,233,236,1) 59%,rgba(249,250,251,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eef2f4', endColorstr='#f9fafb',GradientType=0 ); /* IE6-9 */
+  transition: ease-in-out;
+}
+
+input.disabled-class {
+  min-width: 100%;
+}
+
 .login-form input {
   width: 97%;
 }
@@ -134,7 +158,7 @@ a {
   font-size: 30px;
   bottom: 68%;
   left: 50%;
-  margin-right: -50%;
+  top: 7%;
   transform: translate(-50%, -50%);
 }
 
@@ -151,13 +175,13 @@ a {
   padding-bottom: 10px;
 }
 
-.hero-text > h1, .hero-text > h2, .hero-text > h3, .hero-text > h4, .here-button {
+.hero-text > h1, .hero-text > h2, .hero-text > h3{
   font-family: sans-serif;
   color: white;
   font-size: 20px;
 }
 
-.hero-text > h2, .hero-text > h3, .hero-text > h4, .here-button {
+.hero-text > h2, .hero-text > h3{
   padding-top: 10px;
   font-size: 16px;
 }
@@ -183,13 +207,17 @@ a {
     opacity: 0;
   }
   45% {
-    opacity: 1
+    opacity: 1;
   }
   75% {
-    opacity: 1
+    opacity: 1;
+  }
+  99% {
+    opacity: 0;
   }
   100% {
     opacity: 0;
+    visibility: hidden;
   }
 }
 
@@ -198,7 +226,7 @@ a {
     opacity: 0;
   }
   100% {
-    opacity: 1
+    opacity: 1;
   }
 }
 
@@ -246,9 +274,17 @@ a {
 }
 
 .hero-text > h4 {
-  padding: 0px;
-  margin-left: 21%;
-  margin-top: -5%;
+  // background:green;
+  position:fixed;
+  margin:0 auto;
+  left:50%;
+  top:35%;
+  transform: translate(-50%, -50%);
+  // margin-left:-150px;
+  // margin-top:-150px;
+  // position: absolute;
+  // top: 36.5%;
+  // left: 21.5%;
   color: white;
   font-family: sans-serif;
   font-size: 42px;
@@ -262,15 +298,20 @@ a {
 }
 
 .here-button {
-  position: relative;
-  z-index: 1;
+  position:fixed;
+  margin:0 auto;
+  left:50%;
+  top:42.5%;
+  transform: translate(-50%, -50%);
+  // position: relative;
+  z-index: 0;
   border-radius: 50px;
-  padding: 0px;
+  // padding: 0px;
   width: 125px;
   height: 50px;
-  margin-left: 48.5%;
+  // margin-left: 48.5%;
   overflow: hidden;
-  margin-top: -5%;
+  // margin-top: -5%;
   color: white;
   font-family: sans-serif;
   font-size: 42px;
@@ -283,7 +324,7 @@ a {
   animation-duration: 1s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
-  transform: translate(-0%, 677%);
+  // transform: translate(-0%, 677%);
   opacity: 0;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&0+49,1+100 */
   background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 49%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
